[project]
name = "gava-connect-plus"
version = "0.1.0"
description = "Async-first production-grade SDK for Kenya's GavaConnect Enterprise API platform."
readme = "README.md"
authors = [
    { name = "Erick", email = "hearteric57@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "gavaconnect"
