[project]
name = "gava-connect-plus"
version = "0.2.0"
description = "Async-first production-grade SDK for Kenya's GavaConnect Enterprise API platform."
readme = "README.md"
authors = [
    { name = "Erick", email = "hearteric57@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.44.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "gavaconnect"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]

[project.scripts]
gava-connect = "gavaconnect.cli:main"
gava-tui = "gavaconnect.tui:run_tui"
